[package]
name = "typefun"
version = "0.1.0"
edition = "2021"
authors = ["Asger Hautop Drewsen <asger@tyilo.com>"]
description = "Emulating various values at compile-time using types"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
